@@ -11,7 +11,7 @@ class nggMediaRss {
 	 * Function called by the wp_head action to output the RSS link for medias
 	 */
 	function add_mrss_alternate_link() {
-		echo "<link id='MediaRSS' rel='alternate' type='application/rss+xml' title='' href='" . nggMediaRss::get_mrss_url() . "' />";		
+		echo "<link id='MediaRSS' rel='alternate' type='application/rss+xml' title='NextGEN Gallery RSS Feed' href='" . nggMediaRss::get_mrss_url() . "' />\n";		
 	}
 	
 	/**
